maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:64: error: ';' expected but '=' found.
		i:Int=0
                     ^JediEscaper:65: error: ';' expected but '=' found.
		j:Int=0
                     ^